@@ -58,7 +58,7 @@ function about()
     var i;
     var txt;
     var helptable = "";
-    helptable += "<tr><td align=center colspan=50><table><tr class='localSearch'><td class='helpboxCommands' style='width: 12px;'></td><td>&nbsp;- indicates a local search (loaded from 'localsearches' subdirectory)</td></tr></table></td></tr>\n";
+    helptable += "<tr><td align=center colspan=50><table><tr class='localSearch'><td class='helpboxCommands' style='width: 12px;'></td><td>&nbsp;- indicates a local search or alias</td></tr></table></td></tr>\n";
 
     for (i = 0; i < 10; i++)
     {
